--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,9 @@ python-dotenv==1.0.0
 aiofiles==23.2.1
 aiohttp==3.9.1
 curl_cffi==0.6.2
-techzdl>=1.2.6
+techzdl==1.2.6
 tqdm==4.66.1
-dill==0.3.7.1
+dill==0.3.7
 python-multipart==0.0.6
 requests==2.31.0
 python-jose==3.3.0
